--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,78 @@
-<!doctype html><html lang="en"><head>	<!-- Required meta tags -->	<meta charset="utf-8">    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    <!-- Bootstrap CSS -->    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">    <title>Assignment2</title>	 	</head><body>	<div class="container">		<header>			<div class="container mb-5">				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">					<a class="navbar-brand ml-5" href="index.html">ALTAMASH MOMIN</a>					<div class="collapse navbar-collapse" id="navbarSupportedContent">						<ul class="navbar-nav ml-auto">							 <li class="nav-item">								<a class="nav-link" href="index.html">About</a> 							</li> 							<li class="nav-item">								<a class="nav-link" href="portfolio.html">Portfolio</a> 							</li> 							<li class="nav-item">								<a class="nav-link" href="contact.html">Contact</a>							</li>						</ul>					</div>				</nav>				</div>		</header>
+<!doctype html>
+<html lang="en">
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+    <title>Assignment2</title>
+	 	
+</head>
+	<body id="background">
+		<div class="container">
+			<header>
+				<div class="container mb-5" id="nav">
+					<nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
+						<a class="navbar-brand ml-5 pl-5" href="index.html" id="altamash">ALTAMASH MOMIN</a>
+						<button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                			<span class="navbar-toggler-icon"></span>
+                   		</button>
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav ml-auto pr-5 mr-5">
+								 <li class="nav-item">
+									<a class="nav-link" href="index.html" id="link">About</a> 
+								</li> 
+								<li class="nav-item">
+									<a class="nav-link" href="portfolio.html" id="link">Portfolio</a> 
+								</li> 
+								<li class="nav-item">
+									<a class="nav-link" href="contact.html" id="link">Contact</a>
+								</li>
+							</ul>
+						</div>
+					</nav>	
+				</div>
+			</header>
+			<br> 
+			
+			
+			<!---- contactinfo ---->
+			<section id="contactinfo">  
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12 col-md-8 col-lg-8">
+							<label for="contact" id="contact">CONTACT</label>
+							<hr>
+							<form>
+								<label for="name">Name</label>
+								<div class="form-group">
+									<input type="text" placeholder="Your name here" required="required">
+								</div>
+								<label for="email">Email</label>
+								<div class="form-group">
+									<input type="text" placeholder="example@gmail.com" required="required">
+								</div>
+								<label for="message">Message</label>
+								<div class="form-group">
+									<textarea class="form-control" id="exampleTextarea" rows="8" placeholder="Enter message in here"></textarea>
+									<br>
+									<button type="submit" id="submit">Submit</button>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</section>
+			<footer id="footer">
+				<div class="fixed-bottom text-center">
+					2018 &copy;
+				</div>
+			</footer>
+		</div>
+	</body>
+</html>
+		
