--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-<!doctype html><html lang="en"><head>	<!-- Required meta tags -->	<meta charset="utf-8">    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    <!-- Bootstrap CSS -->    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">    <title>Assignment2</title>	 	</head><body>	<div class="container">		<header>			<div class="container mb-5">				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">					<a class="navbar-brand ml-5" href="index.html">ALTAMASH MOMIN</a>					<div class="collapse navbar-collapse" id="navbarSupportedContent">						<ul class="navbar-nav ml-auto">							 <li class="nav-item">								<a class="nav-link" href="index.html">About</a> 							</li> 							<li class="nav-item">								<a class="nav-link" href="portfolio.html">Portfolio</a> 							</li> 							<li class="nav-item">								<a class="nav-link" href="contact.html">Contact</a>							</li>						</ul>					</div>				</nav>				</div>		</header>		<section>		<div class="row flex-row">			<div class="col-sm-12 col-m-10 col-lg-10 mt-5 align-content-center">				<div class="card">					<div class="card-body text-center">						<h1 class="card-title">ABOUT ME</h1>						<hr>						<div class="media">						<img class="img-fluid" width="200px"  height="auto" src="cat.jpg" alt="Generic placeholder image">						<div class="d-flex justify-content-end">							<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.							</p>						</div>						</div>					</div>				</div>			</div>		</div>		</section>		<div class="fixed-bottom text-center">			<footer>				2018 &copy;			</footer>		</div>	</div>		    <!-- jQuery first, then Popper.js, then Bootstrap JS -->    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>  </body></html>
+<!doctype html>
+<html lang="en">
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<!-- Bootstrap CSS -->
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+    <title>Assignment2</title>
+	 	
+</head>
+<body id="background">
+	<div class="container">
+		<header>
+			<div class="container mb-5" id="nav">
+				<nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
+					<a class="navbar-brand ml-5 pl-5" href="index.html" id="altamash">ALTAMASH MOMIN</a>
+					<button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                		<span class="navbar-toggler-icon"></span>
+                   </button>
+					<div class="collapse navbar-collapse" id="navbarNav">
+						<ul class="navbar-nav ml-auto mr-5 pr-5">
+							 <li class="nav-item active">
+								<a class="nav-link" href="index.html" id="link">About</a> 
+							</li> 
+							<li class="nav-item">
+								<a class="nav-link" href="portfolio.html" id="link">Portfolio</a> 
+							</li> 
+							<li class="nav-item">
+								<a class="nav-link" href="contact.html" id="link">Contact</a>
+							</li>
+						</ul>
+					</div>
+				</nav>	
+			</div>
+		</header>
+		<section>
+		<div class="row flex-row">
+			<div class="col-sm-12 col-m-8 col-lg-8 mt-5 align-content-center">
+				<div class="card" id="index">
+					<div class="card-body">
+						<h1 class="card-title" id="aboutme">ABOUT ME</h1>
+						<hr>
+						<div class="media">
+						<img class="img-fluid" width="200px"  height="auto" src="images/cat.jpg" alt="Generic placeholder image">
+						<div class="d-flex justify-content-end flex-wrap text-center">
+							<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+							</p>
+						</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		</section>
+		<footer id="footer">
+		<div class="fixed-bottom text-center">
+				2018 &copy;
+		</div>
+		</footer>
+	</div>
+		
+
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+  </body>
+</html>
